# VeloxLA

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  bench_contraction.cpp  bench_elementwise.cpp  bench_expression_fusion.cpp  bench_matmul_vs_backend.cpp
cmake/: ArchFlags.cmake  CompilerWarnings.cmake  VeloxLAConfig.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  custom_contraction.cpp  expression_chaining.cpp
include/veloxla/: veloxla.hpp
include/veloxla/backend/: backend_dispatch.hpp  blis_backend.hpp  mkl_backend.hpp  openblas_backend.hpp
include/veloxla/core/: layout.hpp  shape.hpp  storage.hpp  tensor.hpp  view.hpp
include/veloxla/expression/: binary_expr.hpp  eval.hpp  expr_base.hpp  reduction_expr.hpp  unary_expr.hpp
include/veloxla/memory/: aligned_allocator.hpp  arena.hpp
include/veloxla/ops/: broadcast.hpp  contraction.hpp  elementwise.hpp  matmul.hpp
include/veloxla/simd/: avx2_kernel.hpp  avx512_kernel.hpp  fallback_kernel.hpp  simd_traits.hpp
include/veloxla/threading/: parallel_for.hpp  thread_config.hpp
include/veloxla/util/: assert.hpp  type_traits.hpp
src/backend/: backend_dispatch.cpp
tests/: CMakeLists.txt
tests/core/: test_shape.cpp  test_storage.cpp  test_tensor.cpp
tests/expression/: test_binary_expr.cpp  test_fusion_correctness.cpp
tests/ops/: test_contraction.cpp  test_matmul.cpp
tests/simd/: test_avx2_kernel.cpp  test_simd_vs_scalar.cpp
